Added junits and jacoco plugin